--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ github_username:
 
 # Build settings
 markdown: kramdown
+kramdown:
+   math_engine: mathjax
 theme: minima
 plugins:
   - jekyll-feed
